--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
 <div ng-controller="HomeCtrl" class="home">
-  <div ng-repeat="audio in audios" class="arman-button" ng-click="playAudio($index)">
+  <div ng-repeat="audio in audios" class="arman-button" on-hold="share($index)" ng-click="playAudio($index)">
     <div class="overlay">
       <span class="text">{{audio.text}}</br></br>{{audio.emoji}}</span>
     </div>
-    <div class="image"></div>    
+    <div class="image"></div>
   </div>
 </div>
